# gah

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_gitbash.bat  clip.patch  pack_appimage.sh
.github/workflows/: build_release.yml  build_test.yml  ci.yml
AppDir/usr/share/applications/: gah.desktop
sqlite3/: REQUIREMENT_FILES.txt
src/: gah.cpp  gah.h  main.cpp
